Prevent any time elements from wrapping

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -63,3 +63,7 @@
   display: flex;
   justify-content: center;
 }
+
+time {
+  white-space: nowrap;
+}
