--- a/_sass/events.scss
+++ b/_sass/events.scss
@@ -73,7 +73,3 @@ ul.event-listing {
 .muted {
   opacity: 70%;
 }
-
-.event-date time {
-  white-space: nowrap;
-}
